# SS24-AutoML

./: .gitignore  Makefile  README.md  final_poster_vision_abd-vision.pptx  neps_architecture_trial.py  pyproject.toml  requirements.txt  run.py  run_instructions.md  team_info.txt
.github/workflows/: test_evaluation.yml
data/exam_dataset/: predictions.npy
src/automl/: automl.py  datasets.py  dummy_model.py  early_stopping.py  neps_pipeline_space.yaml  pipeline_space.py  scheduler_wrapper.py  utils.py
